# drone

./: README.md
drone_bringup/: package.xml  setup.py
drone_bringup/launch/: common.launch.py  gcs.launch.py  real.launch.py  sim.launch.py  system.launch.py
drone_bringup/models/lidar_2d_v2/: model.sdf
drone_bringup/models/x500_base/: model.sdf
drone_bringup/models/x500_lidar_2d/: model.sdf
drone_interface/: CMakeLists.txt  package.xml  setup.py
drone_interface/drone_interface/: px4_odom_bridge.py  wait_for_px4.py
drone_interface/src/: px4_odom_bridge.cpp
drone_sim/: package.xml  setup.py
drone_sim/launch/: sim.launch.py
drone_sim/models/lidar_2d_v2/: model.sdf
drone_sim/models/x500/: model.sdf
drone_sim/models/x500_lidar_2d/: model.sdf
drone_sim/worlds/: simple_room.sdf
models/lidar_2d_v2_modified/: model.sdf
models/x500_lidar_2d_modified/: model.config  model.sdf
